chore: application.yml 주석 수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,16 +8,16 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update # create: ??? ? ??? ??? ?? ?? / update: ??
-    show-sql: false # JPA? ????? sql? log? ??. hibernate log ?? ? false? ??
+      ddl-auto: update # create: 재시작 시 테이블 지우고 다시 만듦 / update: 유지
+    show-sql: false # JPA가 create 해주는 sql을 log로 남김. hibernate log 사용 시 false로 설정
     properties:
       hibernate:
-        ### sql ??? ??
-        format_sql: true # sql ??? (? ??, ????)
-        highlight_sql: true # sql ???? ????? ??
-        use_sql_comments: true # sql ??
+        ### sql 가독성 증가
+        format_sql: true # sql 포매팅 (줄 바꿈, 들여쓰기)
+        highlight_sql: true # sql 키워드에 하이라이트 표시
+        use_sql_comments: true # sql 주석
         default_batch_fetch_size: 10
-        dialect: org.hibernate.dialect.MySQLDialect # JPA? ???? sql? mysql? ??
+        dialect: org.hibernate.dialect.MySQLDialect # JPA가 사용하는 sql을 mysql로 설정
 
   datasource:
     url: jdbc:mysql://localhost:3306/sbb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
@@ -27,6 +27,6 @@ spring:
 logging:
   level:
     org.hibernate.SQL: DEBUG # hibernate sql log level
-    org.hibernate.orm.jdbc.bind: TRACE # ???? ???? ?? ??
-    org.hibernate.orm.jdbc.extract: TRACE # ??? ??? ? ??
-    org.springframework.transaction.interceptor: TRACE # ???? ??? ??? ?? ??
+    org.hibernate.orm.jdbc.bind: TRACE # 바인딩된 파라미터 값을 출력
+    org.hibernate.orm.jdbc.extract: TRACE # 쿼리로 읽어온 값 출력
+    org.springframework.transaction.interceptor: TRACE # 트랜잭션 관리와 관련된 동작 출력
