chore: cors 옵션 추가, application-prod.yml파일 gitignore에 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8080 # default
   shutdown: graceful
 
+cors:
+  allowed-origins: "http://localhost:5173"
+
 spring:
   output:
     ansi:
